# git-upstream-workflow

./: .pre-commit-config.yaml  README.md  example1.toml  file1-extra.txt  file1.txt  file1_extra.txt  file2.txt  git-uw1.toml  pyproject.toml
.github/workflows/: format.yml  test.yml
docs/: workflows.md
guw/: main.py
tests/: test_add.py  test_integrate.py  test_remove.py  test_sync.py  test_update.py
